[project]
name = "rag-telecom-chatbot"
version = "0.1.0"
description = "RAG-based telecom customer care chatbot tutorial"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-chroma",
    "langchain-groq",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "pandas",
    "python-dotenv",
    "streamlit",
    "fpdf2",
    "pypdf",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-experimental>=0.4.2",
    "rank-bm25>=0.2.2",
    "unstructured[pdf]>=0.23.1",
    "unstructured-inference>=1.6.13",
]
